# soop-ai-timeline

./: .gitattributes  .gitignore  PRIVACY.md  README.md  RELEASE_CHECKLIST.md  SOOPTimeline.spec  THIRD_PARTY_NOTICES.md  build_exe.ps1  main.py  pyproject.toml
.github/workflows/: release.yml
evaluation/: example_predictions.json  topic_boundary_cases.json
soop_timeline/: __init__.py  database.py  main.py  models.py  paths.py  styles.py
soop_timeline/services/: __init__.py  ai_provider.py  analyzer.py  cache_manager.py  channel_id.py  comment_publisher.py  credentials.py  diagnostics.py  discovery.py  eta.py  gemini_line_rewrite.py  gemini_style.py  gemini_timeline.py  live_stream.py  manual_link.py  preferences.py  publisher.py  text_editing.py  timeline_blocks.py  timeline_document.py  timeline_timestamp.py  timeline_validation.py  topic_evaluation.py  transcript_export.py  (+3 more)
tests/: test_ai_provider.py  test_analysis_pipeline.py  test_analysis_worker.py  test_cache_manager.py  test_channel_id.py  test_comment_publisher.py  test_database.py  test_diagnostics.py  test_discovery.py  test_distribution_docs.py  test_eta.py  test_gemini_style.py  test_line_rewrite.py  test_main.py  test_main_window_logic.py  test_manual_link.py  test_preferences.py  test_text_editing.py  test_timeline_blocks.py  test_timeline_document.py  test_timeline_editor_focus.py  test_timeline_timestamp.py  test_timeline_validation.py  test_topic_evaluation.py  test_transcript_export.py  test_update_checker.py  test_version_sync.py  test_vod_stream.py
tools/: evaluate_topic_boundaries.py
(+14 files in other folders)
