[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soop-timeline"
version = "0.4.3"
description = "SOOP VOD timeline review desktop app"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faster-whisper>=1.1,<2",
    "google-genai>=1.0,<2",
    "keyring>=25,<27",
    "PySide6>=6.8,<7",
    "qtwebview2==0.4.1; platform_system == 'Windows'",
]

[project.scripts]
soop-timeline = "soop_timeline.main:main"

[project.optional-dependencies]
gpu-windows = [
    "nvidia-cublas-cu12==12.6.4.1; platform_system == 'Windows' and platform_machine == 'AMD64'",
    "nvidia-cudnn-cu12==9.6.0.74; platform_system == 'Windows' and platform_machine == 'AMD64'",
]
build = [
    "pyinstaller>=6.0,<7",
]

[tool.setuptools.packages.find]
include = ["soop_timeline*"]
